data/all_generated_tests/raw_wast_tests/br_table_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2561.wast
;; **Test 10: br_table causing trap upon misaligned operand stack across imported/exported call** - Module A exports a function ending with `br_table` instruction that potentially leads to traps. - Module B imports and calls this, leading to surplus or deficit of operands on stack. - Check if `wizard_engine` halts execution due to trap or arity mismatch whilst WebAssembly proceeds.

(assert_invalid
  (module
    (import "modA" "func" (func $importedFunc))
    (func (export "exportedFunc")
      (block
        (call $importedFunc)
        (block (br_table 0))
      )
      (i32.eqz) (drop)
    )
  )
  "type mismatch"
)